# spear_confyy

./: .gitignore  CLAUDE.md  README.md  compose.yaml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  gitlab.py  llm_client.py  main.py  retrieval.py  runtime_settings.py
backend/tests/: test_auth.py  test_documents.py  test_gitlab.py  test_retrieval.py  test_runtime_settings.py
design-system/spear/: MASTER.md
frontend/: CLAUDE.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/customer/: page.tsx
frontend/src/app/customer/docs/[id]/: page.tsx
frontend/src/app/team/: page.tsx
frontend/src/app/team/docs/: page.tsx
frontend/src/components/: brand.tsx  settings-panel.tsx  theme-toggle.tsx
