[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spear-backend"
version = "0.1.0"
description = "Spear knowledge, documentation and team chat API"
requires-python = "==3.8.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.23,<0.34",
  "pydantic>=2.5,<2.11",
  "pydantic-settings>=2.2,<2.8",
  "httpx>=0.27",
  "structlog>=24.1,<25",
  "psycopg[binary]>=3.1,<3.2",
  "openai>=1.40,<2",
  "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<8.4"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

